<resources>
    <string name="locale">system</string>
    <string name="dilog_loginqr">Please Scan QR Code from OttoPay Sales or skip it if you don\'t have a QR code</string>
    <string name="hipsum_1">Helvetica four loko wolf, mixtape pug single-origin coffee freegan whatever williamsburg messenger bag tumeric irony fam beard.</string>
    <string name="hipsum_2">Affogato gentrify bespoke irony. Hexagon master cleanse mustache pinterest unicorn live-edge. Neutra marfa hell of scenester, kickstarter ennui cronut DIY. Vice iMobile occupy keffiyeh 3 wolf moon hammock hell of tbh kickstarter unicorn yuccie pork belly plaid.</string>
    <string name="hipsum_3">Aesthetic coloring book shabby chic shoreditch locavore, mustache austin VHS. Fanny pack thundercats coloring book green juice tbh four loko. Vice hell of cold-pressed, tbh fashion axe post-ironic franzen humblebrag hot chicken scenester. Subway tile neutra activated charcoal fixie, health goth pop-up cray.</string>
    <string name="temp_name">-</string>
    <string name="temp_id">-</string>
    <string name="temp_email">-</string>
    <string name="s_left">Show QR Code</string>
    <string name="s_right">Scan QR Code</string>
    <string name="title_activity_nearby_merchant">Nearest merchant</string>
    <string name="nearby_merchant_hint_search">Input merchant name or region</string>
    <string name="nearby_merchant_label_powered_by">Powered by Ottopay</string>
    <string name="nearby_merchant_label_promo">Promotion</string>
    <string name="nearby_merchant_btn_location">Location</string>
    <string name="nearby_merchant_btn_detail">Detail</string>
    <string name="nearby_merchant_msg_merchant_not_found">Merchant not found</string>
    <string name="s_ain_1">Upload Selfie with ID Card</string>
    <string name="s_ain_2">Upload ID photo</string>
    <string name="s_ain_3">Make sure your goods photo fill the photo frame area</string>
    <string name="s_sub_1">Make sure your Selfie with ID Card photo fill the photo frame area</string>
    <string name="s_sub_2">Make sure your ID photo fill the photo frame area</string>
    <string name="s_sub_3">Upload Product photos</string>
    <string name="dialog_upgrade">Congratulations your data has been sent, validation process will take maximum of 2X24 hours, if the data matches then your account will upgraded automatically</string>
    <string name="message_transaction_success">Transaction Success</string>
    <string name="message_transaction_failed">Transaction Failed</string>
    <string name="qrdialog">Show the QR code below to the buyer, and make sure the amount is correct.</string>
    <string name="coming_soon_message">Coming Soon</string>
    <string name="loading_message">Please wait</string>
    <string name="msg_check_internet_connection">Please check your connection</string>
    <string name="ppob_msg_eemail_is_not_valid">Invalid Email</string>
    <string name="ppob_pendidikan_label_informasi">Information</string>
    <string name="ppob_msg_transaction_in_progress">- Request in progress</string>
    <string name="ppob_hint_email">Email Address</string>
    <string name="ppob_cb_save_to_favorite">Save to favorite</string>
    <string name="ppob_hint_Mobile">Mobile number</string>
    <string name="ppob_btn_favorite">Favourite Number</string>
    <string name="ppob_msg_share_it">Share to …</string>
    <string name="ppob_btn_favorite_list">See Favorites</string>
    <string name="ppob_voucher_game_note_full">Examples of Game UserID Formats : UserID (ServerID) = 85186388 (22224) Please pay attention to the process of filling in the User ID and Server ID. Make sure to fill in the ID number accordingly, avoid using spaces, or using other symbol* # !.</string>
    <string name="ppob_voucher_game_note_full_rolename">Examples of Game UserID Formats : UserID (ServerID) = 85186388 (22224) Please pay attention to the process of filling in the User ID, Role Name and Server ID. Make sure to fill in the ID number accordingly, avoid using spaces, or using other symbol* # !.</string>
    <string name="ppob_voucher_game_note_less">Please pay attention when fill User ID . Make sure to the ID number is correct, avoid using spaces, or using other symbol * # !.</string>
    <string name="ppob_voucher_game_note_id">Make sure enter correct User ID</string>
    <string name="ppob_voucher_game_note_server">Make sure enter correct User ID and Server ID</string>
    <string name="ppob_voucher_game_note_role">Make sure enter correct User ID, Role Name, and Server ID</string>
    <string name="ppob_msg_invalid_email_address">Invalid email</string>
    <string name="ppob_msg_phone_is_not_valid">Invalid Mobile number</string>
    <string name="ppob_msg_phone_not_found">Customer ID not found</string>
    <string name="ppob_label_email">Input customer email (optional)</string>
    <string name="ppob_label_email_desc">If email provided, payment receipt will be sent to customer email</string>
    <string name="ppob_label_spj_desc">* Example: SPJ 1234567 for March 2019, then enter 12345670319</string>
    <string name="ppob_msg_phone_is_required">Mobile Number is mandatory</string>
    <string name="ppob_msg_no_meter_is_required">Meter number is mandatory</string>
    <string name="ppob_msg_no_meter_invalid">Invalid meter number</string>
    <string name="ppob_please_select_payment_method">Choose payment type!</string>
    <string name="ppob_please_select_payment_method_dot">Choose payment type…</string>
    <string name="ppob_label_payment_method">Payment Type</string>
    <string name="ppob_hint_role_name">Role Name</string>
    <string name="ppob_hint_server_id">Server ID</string>
    <string name="ppob_hint_user_id">User ID</string>
    <string name="ppob_server_id_is_required">Server ID is mandatory!</string>
    <string name="ppob_role_name_is_required">Role Name is mandatory!</string>
    <string name="ppob_label_select_wallet">Choose Service…</string>
    <string name="ppob_label_select_product">Choose Service…</string>
    <string name="ppob_top_up_select_wallet_title">Choose Servicen</string>
    <string name="ppob_top_up_select_product_title">Choose Service</string>
    <string name="ppob_hint_id_pelanggan">Customer Number *</string>
    <string name="ppob_id_pelanggan_is_required">Customer ID is mandatory!</string>
    <string name="ppob_game_not_available">Game not available</string>
    <string name="ppob_label_field_is_required">*) mandatory</string>
    <string name="ppob_tab_listrik_pln">Prepaid Electricity</string>
    <string name="ppob_tab_tagihan_pln">Postpaid Electricity</string>
    <string name="title_activity_show_payment_code">Pay with QR</string>
    <string name="ppob_label_product_price_prepaid">Price</string>
    <string name="ppob_label_product_price_postpaid">Bills</string>
    <string name="ppob_btn_refund">Refund request</string>
    <string name="show_payment_code_label_title">Pay with QR</string>
    <string name="show_payment_code_desc">Please show QR code, Barcode, or mention the token code to the clerk or cashier to make a payment.</string>
    <string name="show_payment_code_desc_oc">Please show the Payment Code to the clerk or cashier at the convenience store to make a payment</string>
    <string name="show_payment_code_label_timer">Time left</string>
    <string name="show_payment_code_label_kode_token">Token Code :</string>
    <string name="show_payment_code_label_barcode">Barcode:</string>
    <string name="activation_confirmation_tittle">OttoPay</string>
    <string name="activation_confirmation_msg_conf_questtion">Activate %1$s Dompet Kamu ?</string>
    <string name="activation_confirmation_msg_conf_oc">Activate %1$s OttoCash Account ?</string>
    <string name="activation_confirmation_tac_ottopay"><![CDATA[ I have read and agree to the Ottokonek <font color="#d04a55">
                Terms & Conditions. </font> ]]></string>
    <string name="activation_confirmation_tac_ottocash"><![CDATA[ Saya telah membaca dan setuju dengan <font color="#d04a55">
                Syarat & Ketentuan </font> OttoCash yang berlaku. ]]></string>
    <string name="activation_confirmattion_msg_tac_ottopay_required"><![CDATA[Anda harus menyetujui syarat & ketentuan OttoPay]]></string>
    <string name="activation_confirmattion_msg_tac_ottocash_required"><![CDATA[Anda harus menyetujui syarat & ketentuan OttoCash]]></string>
    <string name="donasi_menu">Donasi</string>
    <string name="donasi_msg_nama_donatur_required">Donor Name is Mandatory</string>
    <string name="donasi_msg_amount_required">Enter donation amount</string>
    <string name="donasi_msg_email_required">Email is mandatory</string>
    <string name="donasi_msg_email_invalid">Invalid email</string>
    <string name="donasi_msg_phone_required">Mobile Number is mandatory</string>
    <string name="donasi_msg_phone_invalid">Invalid Mobile Number</string>
    <string name="title_activity_inbox">Inbox</string>
    <string name="share_qr_msg_download_success">Success save QR image</string>
    <string name="title_activity_inbox_edit">Inbox</string>
    <string name="inbox_edit_labeel_counter">%1$d Selected</string>
    <string name="btn_bayar">Pay</string>
    <string name="error_ms_no_internet_connection">The Connection was reset, please try again</string>
    <string name="error_msg_internet_connection_lost">The Connection was reset, please try again</string>
    <string name="error_msg_response_error_title">Failed to connect with server</string>
    <string name="error_msg_response_error">If problem occurred please contact OttoKonek customer service (639501938743)</string>
    <string name="error_msg_something_wrong">Something went wrong</string>
    <string name="title_syarat_ketentuan">OttoPoint Register</string>
    <string name="title_syarat_ketentuan_two">Term &amp; Condition</string>
    <string name="empty_string">…</string>
    <string name="empty_poin">0</string>
    <string name="empty_currency">Rp 0</string>
    <string name="empty_button_tukar_poin">Redeem 0 point</string>
    <string name="menu_active_poin">Activation</string>
    <string name="menu_tukar_kupon">Coupon Redeem</string>
    <string name="label_otto_point">Otto Point</string>
    <string name="label_phone_number">Mobile Number</string>
    <string name="label_code_phone_indo">+62</string>
    <string name="label_kupon_saldo_ottopay">OttoPay Coupon Balance</string>
    <string name="label_metode_pembayaran">Payment Method</string>
    <string name="label_ya">Yes</string>
    <string name="label_tidak">No</string>
    <string name="label_saldo">Balance</string>
    <string name="label_status">Status</string>
    <string name="label_terpakai">Used</string>
    <string name="label_nomor_hp_terdaftar">Registered Mobile Number</string>
    <string name="place_holder_phone_number">Enter Mobile Number</string>
    <string name="text_info_active_account_pede">Already registered in PEDE?\nPlease enter your Mobile number</string>
    <string name="text_success">Success!</string>
    <string name="text_success_activation_account_pede">Your Pede Points has been successfully activated. Points have been combined into Otto Point</string>
    <string name="text_pilih_kupon">Select the coupon that you want to convert to a balance.</string>
    <string name="text_info_aktivasi_one">I am willing to use the registered mobile number</string>
    <string name="text_info_aktivasi_two">I have read and agree to the Terms &amp; Conditions</string>
    <string name="button_masuk">Login</string>
    <string name="button_cek_poin">Check Point</string>
    <string name="button_kembali">Back</string>
    <string name="button_detail">Detail</string>
    <string name="button_aktivasi">Register</string>
    <string name="text_pilih_jenis_transfer">Select transfer method</string>
    <string name="text_transfer_ke_e_money">Transfer to E-money</string>
    <string name="text_transfer_ke_bank">Bank Transfer</string>
</resources>