<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="gone">

    <TextView
        style="@style/TextView12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pilih_jenis_transfer" />

    <RadioGroup
        android:id="@+id/payTypeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:checked="true"
            android:id="@+id/eMoneyType"
            style="@style/TextView12spbold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_transfer_ke_e_money" />

        <RadioButton
            android:id="@+id/bankType"
            style="@style/TextView12spbold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/text_transfer_ke_bank" />
    </RadioGroup>
</LinearLayout>