<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.otto.mart.ui.activity.ottopoint.SyaratKetentuanActivity">

    <com.otto.mart.ui.component.ActionbarOttopointWhite
        android:id="@+id/view_actionbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:aow_title="@string/title_syarat_ketentuan"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="28dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/grey_dark"
                        android:text="@string/title_syarat_ketentuan_two"/>

                    <WebView
                        android:id="@+id/webview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:layout_marginLeft="-8dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:textSize="14sp"
                        android:textColor="@color/grey_three"
                        android:text="@string/label_nomor_hp_terdaftar"/>

                    <TextView
                        android:id="@+id/tv_nomor_hp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/grey_dark"
                        android:text="@string/empty_string"/>
                </LinearLayout>

                <CheckBox
                    style="@style/RadioButtonCheckBlue"
                    android:id="@+id/rd_check_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="18dp"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:text="@string/text_info_aktivasi_one"
                    android:textColor="@color/grey_dark" />

                <CheckBox
                    style="@style/RadioButtonCheckBlue"
                    android:id="@+id/rd_check_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:paddingStart="8dp"
                    android:paddingEnd="0dp"
                    android:textColor="@color/grey_dark"
                    android:text="@string/text_info_aktivasi_two"/>
            </LinearLayout>
        </ScrollView>

        <Button
            style="@style/ButtonBlueSoftTwo"
            android:id="@+id/btn_aktivasi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/button_aktivasi"/>
    </LinearLayout>
</LinearLayout>
