<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/view_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_body_container"
        android:layout_marginStart="@dimen/space_body_container"
        android:layout_marginEnd="@dimen/space_body_container"
        android:text="@string/text_pilih_kupon"
        android:visibility="gone"
        style="@style/Text"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/CardItem">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/image_riwayat_kupon"
                android:padding="@dimen/space_body_container">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="normal"
                    android:text="@string/label_saldo"
                    style="@style/Text"/>

                <TextView
                    android:id="@+id/tv_saldo"
                    style="@style/Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empty_currency"
                    android:textColor="@android:color/white"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/bg_white_round_bottom"
                android:padding="@dimen/space_body_container"
                android:gravity="center_vertical">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/warm_grey"
                        android:textStyle="normal"
                        android:text="@string/label_status"
                        style="@style/Text"/>

                    <TextView
                        android:id="@+id/tv_status"
                        style="@style/Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/label_terpakai"
                        android:textColor="@color/dark_grey_blue_two_transparent"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>

                <Button
                    android:id="@+id/btn_detail"
                    style="@style/ButtonBlueSoft"
                    android:layout_width="wrap_content"
                    android:layout_height="36dp"
                    android:text="@string/button_detail" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>