<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/width_dialog_notice"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="24dp">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/vecto_golden_ticket"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:textColor="@color/ocean_blue"
        android:textStyle="bold"
        android:text="@string/text_success"
        style="@style/Text"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:textAlignment="gravity"
        android:textStyle="normal"
        android:textColor="@color/grey_dark"
        android:text="@string/empty_string"
        style="@style/Text.Medium"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:text="@string/button_kembali"
        style="@style/ButtonBlueCapsule"/>
</LinearLayout>