<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BackgroundPopupTopRound">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/menu_tukar_kupon"
            style="@style/Text.Medium"/>

        <ImageView
            android:id="@+id/view_close"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/vector_cross" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="normal"
                android:text="@string/label_kupon_saldo_ottopay"
                style="@style/Text.Medium"/>

            <TextView
                android:id="@+id/tv_saldo_ottopay"
                style="@style/Text.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_currency"
                android:textStyle="normal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right|center_vertical"
            android:orientation="vertical"
            tools:ignore="RtlHardcoded">

            <TextView
                android:id="@+id/tv_harga"
                style="@style/Text.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empty_poin"
                android:textColor="@color/dark_grey_blue_two" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey_soft_two"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textStyle="normal"
            android:text="@string/label_metode_pembayaran"
            style="@style/Text.Medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:src="@drawable/vector_logo_ottopoint"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:textStyle="normal"
                android:text="@string/label_otto_point"
                style="@style/Text.Medium"/>

            <TextView
                android:id="@+id/tv_current_poin"
                style="@style/Text.Medium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/empty_poin"
                android:textAlignment="gravity"
                android:textStyle="normal"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_tukar"
        style="@style/ButtonBlueCapsule"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="30dp"
        android:text="@string/empty_button_tukar_poin" />
</LinearLayout>